fix: dodanie flagi no_log: true

--- a/tasks/create_accounts.yml
+++ b/tasks/create_accounts.yml
@@ -1,7 +1,7 @@
 ---
 - name: "👥 Create users accounts"
   include_tasks: create_account.yml
-  # no_log: true
+  no_log: true
   loop: "{{ input_role_accounts_on_host }}"
   loop_control:
     loop_var: var_account_on_host
