--- a/tasks/copy_ssh_keys.yml
+++ b/tasks/copy_ssh_keys.yml
@@ -35,6 +35,7 @@
     - var_private_ssh_key is defined and var_private_ssh_key != ""
 
 - name: "🔐 Set authorized keys for {{ var_username }}"
+  no_log: true
   become: true
   authorized_key:
     key: "{{ item.authorized_key }}"
